@@ -3,6 +3,8 @@
 	".../libX11.so: error adding symbols: DSO missing ..." issue.
 	* libcsoup: disabled the build of the test program for Android.
 	* Makefile.am: Added the 64x64 icon.
+	* ezgui.c: Fixed the bug which failed to save the transparent
+	screenshots.
 
 20170517:
 	* ezgui.c: Added event to font_face text entry so it can choose
